--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 @media (min-width: 768px) {
     .bursts-hero {
-        background: url("/static/img/background2.svg") no-repeat !important;
+        background: url("img/background2.svg") no-repeat !important;
         background-size: 90% !important;
         background-position: right 40% center !important;
         -webkit-box-pack: center !important;
