--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
 .navbar-collapse{ justify-content: flex-end;}
 
 .principal{
+    margin-left:-200px;
     font-size: 50px;
     font-weight: 70;
     letter-spacing: -0.04em !important;
